--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Education</a></li>
+						<li><a href="#two">Publications</a></li>
 						<li><a href="#three">Experience</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
@@ -56,14 +56,20 @@
 										<!--<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>-->
 									</header>
-									<p>Under construction</p>
+									<p>I am a Ph.D. candidate in the Mathematics Departmant at Louisiana State University, advised by Prof. Arnab Ganguly. 
+										My research interest lies in probability and stochastic analysis. 
+										My current research focuses on some stochastic algorithms and learning problems related to stochastic differential equations.  
+										Before joining LSU, I received my BS degree from Beijing Normal University in 2018.
+										</p>
+									<p>For more details, see my <a href="annshuu.github.io/folder/CV.pdf">CV</a>
+									</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Education</h3>
+									<h3>Publications</h3>
 									<!--
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
@@ -81,6 +87,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Experience</h3>
+									<p>Under construction</p>
 									<!--
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
