--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										My current research focuses on some stochastic algorithms and learning problems related to stochastic differential equations.  
 										Before joining LSU, I received my BS degree from Beijing Normal University in 2018.
 										</p>
-									<p>For more details, see my <a href="annshuu.github.io/folder/CV.pdf">CV</a>
+									<p>For more details, see my <a href="annshuu.github.io/files/CV.pdf">CV</a>
 									</p>
 								</div>
 							</section>
